prevent word-breaks in article language display

--- a/plugins/se.infomaker.articlelanguage/scss/articlelanguage.scss
+++ b/plugins/se.infomaker.articlelanguage/scss/articlelanguage.scss
@@ -1,3 +1,7 @@
+.im-articlelanguage-bar-item {
+    white-space: nowrap;
+}
+
 .im-articlelanguage {
     min-width: 200px;
 
